# pi0

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
hp_search/batch_size=32_lr=0.0001_warmup_steps=200/logs/: events.out.tfevents.1773443916.Mac.lan.71453.2
hp_search/batch_size=32_lr=0.0001_warmup_steps=500/logs/: events.out.tfevents.1773445478.Mac.lan.71453.3
hp_search/batch_size=32_lr=5e-05_warmup_steps=200/logs/: events.out.tfevents.1773440898.Mac.lan.71453.0
hp_search/batch_size=32_lr=5e-05_warmup_steps=500/logs/: events.out.tfevents.1773442372.Mac.lan.71453.1
pi0/: __init__.py  config.py
pi0/data/: __init__.py  collector.py  dataset.py  storage.py
pi0/env/: __init__.py  expert_policy.py  point_mass_env.py
pi0/eval/: __init__.py  baselines.py  evaluator.py  visualize.py
pi0/flow/: __init__.py  flow_matching.py  sampler.py
pi0/model/: __init__.py  action_expert.py  action_head.py  attention.py  backbone.py  pi0_model.py  timestep_embed.py  token_embed.py
pi0/training/: __init__.py  scheduler.py  trainer.py
scripts/: collect_data.py  evaluate.py  hyperparam_search.py  train.py  visualize.py
tests/: test_dataset.py  test_env.py  test_eval.py  test_flow.py  test_model.py  test_training.py
