[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi0"
version = "0.1.0"
description = "Research-grade π0 Vision-Language-Action flow model for robot control"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "imageio>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0"]

[tool.setuptools.packages.find]
include = ["pi0*"]
